# canny-edge-detetction

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
images/1920x1080/: params
images/512x512v2/: params
images/800x600/: params
images/811x500/: params
opencl/: canny.cl  guassian.cl  main.c  non_max.cl  sobel.cl  threshold.cl
opencv/: main.cpp
openmp/: main.c
sequential/: main.c
universal/: universal.c
